fix hexagons on small mobile screens

--- a/_sass/world/2025/base/_media.scss
+++ b/_sass/world/2025/base/_media.scss
@@ -1,4 +1,9 @@
 @mixin media($query) {
+
+  @if $query == SmallMobileScreens {
+    @media (max-width: 375px) { @content; }
+  }
+
   @if $query == MobileScreens {
     @media (max-width: 700px) { @content; }
   }
